<resources>
    <string name="app_name">Zalo</string>
    <string name="picker_filter_hint">Nhập tên để tìm kiếm</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_loginfragment_log_in_button">Log In…</string>
    <string name="com_facebook_loginfragment_logged_in">Logged In</string>
    <string name="com_facebook_loginfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="pull_to_refresh_pull_label">Kéo để cập nhật…</string>
    <string name="pull_to_refresh_release_label">Thả để cập nhật…</string>
    <string name="pull_to_refresh_refreshing_label">Đang cập nhật…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="empty" />
    <string name="album_name">CameraZalo</string>
    <string name="login_title">Đăng nhập</string>
    <string name="login_hint_username">Nhập tài khoản Zing</string>
    <string name="login_hint_password">Nhập mật mã Zing</string>
    <string name="login_input_username_pass">Vui lòng nhập ID và mật khẩu.</string>
    <string name="invite_to_use_zalo">Mời bạn bè</string>
    <string name="findandadd_friend">Thêm bạn</string>
    <string name="eventnearby">Sự kiện quanh đây</string>
    <string name="plugins">Ứng dụng tương tác</string>
    <string name="zalo">Zalo</string>
    <string name="ask_to_create_shortcut">Bạn có muốn tạo shortcut tại màn hình chính?</string>
    <string name="active">Kích hoạt</string>
    <string name="active_hint_phone_number">Nhập pass code nhận từ sms</string>
    <string name="str_whatsnew">Tính năng mới</string>
    <string name="str_support_file">Chỉ hỗ trợ ảnh với định dạng jpg, jpeg, png</string>
    <string name="str_signin_as">Trạng thái:</string>
    <string name="pushtotalk">NHẤN GIỮ ĐỂ NÓI</string>
    <string name="relasetosend">THẢ RA ĐỂ GỬI</string>
    <string name="pushtocancel">Di chuyển vào đây để Hủy</string>
    <string name="releasetocancel">Thả tay để Hủy</string>
    <string name="str_selectfriend">Đóng</string>
    <string name="str_close">Đóng</string>
    <string name="str_yes">Có</string>
    <string name="str_no">Không</string>
    <string name="str_exit_title">Zalo</string>
    <string name="str_ask_to_exit">Bạn có muốn tắt ứng dụng không?</string>
    <string name="str_checkin_title">Check In</string>
    <string name="str_ask_to_checkin">Bạn có muốn hiển thị thông tin địa điểm để người khác tìm thấy bạn?</string>
    <string name="str_change_phone_title">Đổi số điện thoại</string>
    <string name="str_ask_to_change_phone">Bạn có muốn đổi số điện thoại khác không?</string>
    <string name="str_delete_doodle_title">Thoát</string>
    <string name="str_delete_message_title">Xóa tin nhắn</string>
    <string name="str_delete_message">Bạn có muốn xóa tất cả tin nhắn với người này không?</string>
    <string name="str_delete_all_message">Bạn có muốn xóa tất cả tin nhắn đã chọn không?</string>
    <string name="str_ask_to_ignore_zalo_user">Người này sẽ không thể gửi tin nhắn cho bạn. Bạn có chắc muốn chặn người này?</string>
    <string name="clear_drawing_title">Xóa hình</string>
    <string name="str_ask_to_clear_drawing">Bạn có muốn xóa hình và vẽ lại không?</string>
    <string name="str_ask_to_delete_drawing">Hình đang vẽ sẽ bị mất. Bạn có đồng ý không?</string>
    <string name="str_ask_to_send_game">Bạn có muốn gửi hình vẽ không?</string>
    <string name="str_congrat_game">Bạn vừa đoán đúng từ</string>
    <string name="str_ask_to_cancel_game">"Hình đang vẽ sẽ mất sau khi
chọn Ngừng."</string>
    <string name="str_ask_to_stop_game">Bạn có muốn ngừng chơi không?</string>
    <string name="str_continue_game">Bạn có muốn chơi tiếp không?</string>
    <string name="str_send">Gửi</string>
    <string name="str_playnow">Chơi ngay</string>
    <string name="str_continue">Chơi tiếp</string>
    <string name="str_stop">Ngừng</string>
    <string name="str_title_game_demo">Zalo</string>
    <string name="str_ask_game_demo">Đây là Game Demo, hãy vào Bạn Bè để chọn bạn chơi tiếp.</string>
    <string name="str_select_question">Chọn một từ để vẽ</string>
    <string name="str_ask_to_submit_location">"Bạn có muốn cho người khác thấy vị trí của bạn không?

Thông tin vị trí hiện tại của bạn chỉ được lưu lại trong khoảng thời gian ngắn. Nếu bạn muốn xóa thông tin này hãy chọn Check-out"</string>
    <string name="str_ask_to_logout">Bạn có muốn thay đổi tài khoản không?</string>
    <string name="delete_contact_title">Xóa danh bạ</string>
    <string name="str_ask_to_delete_contact">Bạn có chắc muốn xóa người này?</string>
    <string name="str_guess_word">Bạn hãy nhìn hình và đoán từ</string>
    <string name="str_filter_by">Sắp xếp theo</string>
    <string name="str_hint_name">Nhập tên</string>
    <string name="str_hint_phone">Nhập số ĐT</string>
    <string name="str_hint_birthday">Bấm chọn để nhập</string>
    <string name="str_hint_email">Nhập email</string>
    <string name="str_download_contact_from_server">Đang tải danh bạ từ máy chủ về điện thoại…</string>
    <string name="str_erro_download_contact_from_server">"Tải danh bạ không thành công.
Vui lòng thử lại."</string>
    <string name="str_cancel">Hủy</string>
    <string name="about_version">Phiên bản:</string>
    <string name="about_copyright">"Phát triển bởi Mobile Labs
182 Lê Đại Hành, Q.11, TP.Hồ Chí Minh

©2012 VNG Corporation."</string>
    <string name="nocontacts">Danh sách trống!</string>
    <string name="search_results">Search results for:</string>
    <string name="empty_nearby">"Chưa tìm thấy ai ở gần bạn,
hãy thử lại để tìm bạn trò chuyện."</string>
    <string name="chat_default_text">Nhập tin nhắn</string>
    <string name="button_send">Gửi</string>
    <string name="status_default_text">Bạn đang nghĩ gì</string>
    <string name="chattingwith">Trò chuyện với</string>
    <string name="mores">Thêm</string>
    <string name="ignorelist">Chặn bạn gửi tin nhắn</string>
    <string name="ignorelist_empty">Bạn chưa chặn ai.</string>
    <string name="day">ngày</string>
    <string name="minute">phút</string>
    <string name="hour">giờ</string>
    <string name="lessThanOneMinute">1 phút</string>
    <string name="ok">Đồng ý</string>
    <string name="pastetodraw">Chỉnh sửa</string>
    <string name="shareintent">Chia sẻ</string>
    <string name="cancel">Hủy</string>
    <string name="resend">Gửi lại</string>
    <string name="delete">Xóa</string>
    <string name="edit">Sửa</string>
    <string name="copy">Sao chép</string>
    <string name="reDownload">Tải lại</string>
    <string name="ignore">Chặn người này</string>
    <string name="hint_filter_friends">Nhập tên để tìm kiếm</string>
    <string name="show_recent_messages">Hiển thị tin nhắn gần đây</string>
    <string name="bodyinvite">" moi ban tham gia Zalo, ung dung nhan tin kieu moi. Chi tiet tai: http://zaloapp.com"</string>
    <string name="usernearby">Lân cận</string>
    <string name="invitemenumore">Mời bạn bè</string>
    <string name="select_all">Chọn tất cả</string>
    <string name="waiting">Vui lòng chờ…</string>
    <string name="loading">Đang tải. Vui lòng chờ…</string>
    <string name="signing">Đăng nhập. Vui lòng chờ…</string>
    <string name="get_user">"Tải thông tin người dùng.
Vui lòng chờ…"</string>
    <string name="upload_contact">"Đang tải danh bạ lên máy chủ.
Vui lòng chờ…"</string>
    <string name="upload_successful">Backup danh bạ thành công.</string>
    <string name="upload_failed">"Backup danh bạ không thành công.
Vui lòng thử lại sau."</string>
    <string name="delete_contact">"Đang xóa.
Vui lòng chờ…"</string>
    <string name="description">description</string>
    <string name="input_phone00">Vui lòng nhập số điện thoại để tiếp tục</string>
    <string name="input_phone02">Nếu bạn đã có sẵn mã kích hoạt</string>
    <string name="input_phone04">Tiếp tục</string>
    <string name="verify_01">Vui lòng nhập mã kích hoạt</string>
    <string name="verify_01a">Tin nhắn mã kích hoạt có thể đến chậm, vui lòng chờ trong giây lát.</string>
    <string name="verify_04">Bạn chưa nhận được mã kích hoạt?</string>
    <string name="str_bt_reload">Tải lại</string>
    <string name="str_bt_zingID">Zing ID</string>
    <string name="str_bt_snID">Mạng xã hội</string>
    <string name="str_bt_numberPhone">Số điện thoại</string>
    <string name="logindirection01">Đăng nhập bằng tài khoản Zing</string>
    <string name="logindirection02">Đăng nhập bằng số điện thoại</string>
    <string name="policy"><u>Tôi đồng ý với các Điều khoản sử dụng</u></string>
    <string name="logindirection04">Đăng nhập bằng tài khoàn Zing/Facebook</string>
    <string name="str_optionM_blockuser">Chặn người này</string>
    <string name="str_optionM_clearallMsg">Xóa tin nhắn</string>
    <string name="str_optionM_userInfo">Xem thông tin</string>
    <string name="str_optionM_reportSpam">Thông báo spam</string>
    <string name="str_optionM_showUpdateRoom">Hiện thông tin ra vào phòng</string>
    <string name="str_addfriendchat">Mời thêm bạn</string>
    <string name="str_optionM_enableInEar">Nghe loa trong</string>
    <string name="str_desImg">Image</string>
    <string name="str_tv_country">Quốc gia:</string>
    <string name="str_tv_country_title">Chọn quốc gia</string>
    <string name="str_tv_numberPhone">Số điện thoại:</string>
    <string name="str_inputActiveCode">Nhập mã kích hoạt</string>
    <string name="str_tv_titleBar5">Đăng ký</string>
    <string name="more_title_notification">Thông báo mới</string>
    <string name="notification_empty">Chưa có thông báo mới</string>
    <string name="str_reportabuse">Báo xấu</string>
    <string name="str_menu_photo_download">Tải về</string>
    <string name="str_menu_photo_share">Chia sẻ</string>
    <string name="str_menu_photo_userinfo">Thông tin cá nhân</string>
    <string name="str_menu_photo_sendmes">Nhắn tin</string>
    <string name="str_menu_photo_delete">Xóa ảnh</string>
    <string name="str_group_info">Thông tin nhóm</string>
    <string name="str_group_leave">Rời nhóm</string>
    <string name="str_rooms_info">Thông tin phòng</string>
    <string name="str_rooms_menu_leave">Rời phòng</string>
    <string name="str_verifycode">Mã kích hoạt:</string>
    <string name="str_btnactive">Kích hoạt</string>
    <string name="str_btnreceiveactiveagain">Nhận lại mã kích hoạt</string>
    <string name="str_title_writeInvitation">Kết bạn</string>
    <string name="btn_send_Invitation">Gửi yêu cầu kết bạn</string>
    <string name="str_des_writeInvitation">Nhập lời chào và giới thiệu bản thân</string>
    <string name="str_hint_Invitation">Nhập lời mời kết bạn</string>
</resources>