<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root_backgroundmain" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?backgroundmain"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/bgheader_layout" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/top_tab_bar_height" style="?bgheader">
        <ImageButton android:id="@id/btn_back" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_head_back" android:layout_centerVertical="true" android:contentDescription="@string/str_desImg" style="?btnheader" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_inputActiveCode" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="14.0dip" android:textColor="@color/gray_talk" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/verify_01a" />
        <TextView android:textSize="14.0dip" android:textColor="@color/gray_talk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/verify_01" />
        <RelativeLayout android:background="@drawable/bggroupbox" android:layout_width="fill_parent" android:layout_height="60.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/gray_333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/str_verifycode" android:layout_centerVertical="true" />
            <EditText android:textSize="20.0dip" android:textStyle="bold" android:textColor="@color/black" android:id="@id/input_code" android:background="@*android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="110.0dip" android:maxLines="1" android:layout_centerVertical="true" android:inputType="number" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layoutactive" android:background="@drawable/bgboxsendmessage" android:clickable="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip">
            <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/str_btnactive" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="3.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="14.0dip" android:textColor="@color/gray_talk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/verify_04" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/getActiveCode" android:background="@drawable/bgboxinputactivecde" android:clickable="true" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="10.0dip">
                <TextView android:textSize="12.0dip" android:textStyle="bold" android:textColor="@color/gray_talk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_btnreceiveactiveagain" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>