<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root_backgroundmain" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?backgroundmain"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/bgheader_layout" android:padding="3.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/top_tab_bar_height" style="?bgheader">
        <ImageButton android:id="@id/btn_back" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_head_back" android:layout_centerVertical="true" android:contentDescription="@string/str_desImg" style="?btnheader" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_title_writeInvitation" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textColor="#ff767676" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="10.0dip" android:text="@string/str_des_writeInvitation" />
        <com.zing.zalo.uicontrol.CustomEditText android:autoLink="none" android:layout_gravity="center_vertical" android:id="@id/edtInvitationFriend" android:background="@drawable/edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:maxHeight="100.0dip" android:hint="@string/str_hint_Invitation" android:maxLength="350" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeOptions="actionSend" style="@style/textField" />
        <Button android:textColor="@color/gray_talk" android:gravity="center" android:layout_gravity="center" android:id="@id/btnSendInvitation" android:background="@drawable/btn_default_center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/btn_send_Invitation" />
    </LinearLayout>
</LinearLayout>