<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/bg_chat_grey" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="2.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:id="@id/login_top" android:background="@color/bg_wm_welcome" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/wm_login" android:contentDescription="@string/app_name" />
    </LinearLayout>
    <RelativeLayout android:orientation="vertical" android:background="@color/bg_login_welcome" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/login_content" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layoutphone" android:background="@drawable/bgboxsendmessage" android:clickable="true" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="4.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="4.0dip">
                <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/str_bt_numberPhone" />
            </LinearLayout>
            <TextView android:textSize="14.0dip" android:textColor="@color/login_text_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/logindirection02" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layoutzing" android:background="@drawable/btn_default" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="20.0dip">
                <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/login_text_btsdt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_bt_zingID" />
            </LinearLayout>
            <TextView android:textSize="14.0dip" android:textColor="@color/login_text_hint" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logindirection01" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layoutfbID" android:background="@drawable/btn_default" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="20.0dip">
                <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/login_text_btsdt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_bt_snID" />
            </LinearLayout>
            <TextView android:textSize="14.0dip" android:textColor="@color/login_text_hint" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logindirection04" />
            <RelativeLayout android:orientation="vertical" android:id="@id/layoutpolicy" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <CheckBox android:id="@id/ch_agree" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/btn_check" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <TextView android:textSize="14.0dip" android:textColor="@color/login_text_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/policy" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>