<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root_backgroundmain" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?backgroundmain"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/bgheader_layout" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/top_tab_bar_height" style="?bgheader">
        <ImageButton android:id="@id/btn_back" android:padding="4.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_head_back" android:layout_centerVertical="true" android:contentDescription="@string/str_desImg" style="?btnheader" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_tv_titleBar5" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="14.0dip" android:textColor="@color/gray_talk" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/input_phone00" />
        <RelativeLayout android:orientation="horizontal" android:background="@drawable/bggroupboxtop" android:layout_width="fill_parent" android:layout_height="60.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/gray_talk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/str_tv_country" android:layout_centerVertical="true" />
            <TextView android:textSize="16.0dip" android:textColor="@color/gray_talk" android:id="@id/tvCountry" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="110.0dip" android:singleLine="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/ic_edit_country_code" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_edit" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <Spinner android:id="@id/spCountry" android:background="@drawable/btn_dropdown" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="80.0dip" android:prompt="@string/str_tv_country_title" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="horizontal" android:background="@drawable/bggroupboxbottom" android:layout_width="fill_parent" android:layout_height="60.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/gray_talk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/str_tv_numberPhone" android:layout_centerVertical="true" />
            <EditText android:textSize="20.0dip" android:textStyle="bold" android:textColor="@color/black" android:id="@id/exitText_PhoneNumber" android:background="@*android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="115.0dip" android:maxLines="1" android:layout_centerVertical="true" android:inputType="phone" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layoutgetcode" android:background="@drawable/bgboxsendmessage" android:clickable="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip">
            <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/input_phone04" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingBottom="3.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0dip" android:textColor="@color/gray_talk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/input_phone02" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layoutinputcodeaction" android:background="@drawable/bgboxinputactivecde" android:clickable="true" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="10.0dip">
                <TextView android:textSize="12.0dip" android:textStyle="bold" android:textColor="@color/gray_talk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_inputActiveCode" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:orientation="vertical" android:id="@id/layoutpolicy" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <CheckBox android:id="@id/ch_agree" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/btn_check" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textSize="14.0dip" android:textColor="@color/login_text_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/policy" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>